--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,10 @@
 name: Publish Docker Image
-
 on:
   release:
-    types: [published]
+    types: [published, edited]
 
 jobs:
-  push_to_registry:
+  push_to_registries:
     name: Push to registry
     runs-on: ubuntu-latest
     steps:
