--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: destis/stress-service
         tag_with_ref: true
+        push: true
     - name: Push to GitHub Packages
       uses: docker/build-push-action@v2.3.0
       with:
@@ -29,4 +30,4 @@ jobs:
         registry: docker.pkg.github.com
         repository: idestis/stress-service/stress-service
         tag_with_ref: true
-        
+        push: true
