--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,16 +32,16 @@ jobs:
     - name: Login to GitHub Packages
       uses: docker/login-action@v1
       with:
-        registry: ghcr.io
+        registry: docker.pkg.github.com
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push to GitHub Packages
       uses: docker/build-push-action@v2.3.0
       with:
-        registry: ghcr.io
+        registry: docker.pkg.github.com
         tags: |
-          ghcr.io/destis/stress-service:latest
-          ghcr.io/destis/stress-service:${{ env.GIT_REF }}
+          docker.pkg.github.com/destis/stress-service:latest
+          docker.pkg.github.com/destis/stress-service:${{ env.GIT_REF }}
         push: true
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
